# HighTech_Plant

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  openapi.yaml
backend/: Dockerfile  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/apps/core/: __init__.py  apps.py  exceptions.py  models.py  urls.py  views.py
backend/apps/documents/: __init__.py  apps.py  services.py
backend/apps/extraction/: __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/notifications/: __init__.py  apps.py  models.py  renderers.py  serializers.py  urls.py  views.py
backend/apps/production/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/scheduler/: settings.py  urls.py  wsgi.py
demo/minutes/: minutes_01_discussion.docx  minutes_02_planned_downtime.docx  minutes_03_line_maintenance.docx  per_04_future_shutdown_line66.docx  per_05_future_shutdown_freeze_dry.docx  per_06_future_shutdown_synonyms.docx  per_07_future_shutdown_short.docx  per_08_future_shutdown_window_negotiation.docx  per_09_not_maintenance_pricing.docx  per_10_not_maintenance_hr.docx  per_11_not_maintenance_qc.docx
demo/plan/: plan.xlsx
frontend/: Dockerfile  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json
frontend/src/: index.html  main.ts
frontend/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
frontend/src/environments/: environment.prod.ts  environment.ts
scripts/: create_demo_minutes.py  create_demo_plan.py
scripts/testing/: test_acceptance.sh
(+71 files in other folders)
